fixed flickering bug, added padding and styling to about me text

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -8,6 +8,7 @@
     transform: translateY(-50%);
     width: 50%;
     max-height: 100%;
+    text-align: left;
   }
 
   h1 {
