--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -56,7 +56,7 @@
       font-family: 'Coolvetica';
       color: #ffd700;
       font-weight: 400;
-      margin-top: 0;
+      margin: 20px;
       position: relative;
       margin-bottom: 40px;
       left: 10px;
@@ -91,6 +91,8 @@
       font-size: 15px;
       color: #fff;
       min-width: fit-content;
+      text-align: left;
+      margin: 20px;
 
       &:nth-of-type(1) {
         animation-delay: 1.1s;
@@ -103,6 +105,19 @@
       }
       &:nth-of-type(4) {
         animation-delay: 1.4s;
+      }
+      &:nth-of-type(5) {
+        animation-delay: 1.5s;
+      }
+      &:nth-of-type(6) {
+        animation-delay: 1.6s;
+      }
+      &:nth-of-type(7) {
+        animation-delay: 1.7s;
+      }
+
+      span {
+        color: #ffd700;
       }
     }
   }
